--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="nextEvent"></div>
     <div id="countdown"></div>
     <div id="rooms">
+        <h3>Ämnen och deras salar:</h3>
         <p>Matematik: B15 och B16</p>
         <p>Svenska/Musik: B6 och B7</p>
         <p>Engelska/Moderna språk: C13 och C16</p>
