--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id="clock"></div>
-    <div id="currentEvent"></div>
-    <div id="nextEvent"></div>
-    <div id="countdown"></div>
+    <div id="currentEvent">Laddar aktuellt pass...</div>
+    <div id="nextEvent">Laddar nästa pass...</div>
+    <div id="countdown">Laddar nedräkning...</div>
     <div id="rooms">
         <h3>Ämnen och deras salar:</h3>
         <p>Matematik: B15 och B16</p>
