--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="clock"></div>
-    <div id="currentEvent">Laddar aktuellt pass...</div>
-    <div id="nextEvent">Laddar nästa pass...</div>
-    <div id="countdown">Laddar nedräkning...</div>
-    <div id="rooms">
-        <h3>Ämnen och deras salar:</h3>
-        <p>Matematik: B15 och B16</p>
-        <p>Svenska/Musik: B6 och B7</p>
-        <p>Engelska/Moderna språk: C13 och C16</p>
-        <p>SO: B1 och B2</p>
-        <p>NO: C12</p>
-        <p>Provsal: B5</p>
+    <div class="container">
+        <div class="schedule">
+            <div id="clock" class="info-box"></div>
+            <div id="currentEvent" class="info-box">Laddar aktuellt pass...</div>
+            <div id="nextEvent" class="info-box">Laddar nästa pass...</div>
+            <div id="countdown" class="info-box">Laddar nedräkning...</div>
+        </div>
+        <div class="rooms">
+            <h3>Ämnen och deras salar:</h3>
+            <p>Matematik: B15 och B16</p>
+            <p>Svenska/Musik: B6 och B7</p>
+            <p>Engelska/Moderna språk: C13 och C16</p>
+            <p>SO: B1 och B2</p>
+            <p>NO: C12</p>
+            <p>Provsal: B5</p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
