--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <body>
     <div class="container">
         <div class="schedule">
-            <div id="clock" class="info-box"></div>
-            <div id="currentEvent" class="info-box">Laddar aktuellt pass...</div>
-            <div id="nextEvent" class="info-box">Laddar nästa pass...</div>
-            <div id="countdown" class="info-box">Laddar nedräkning...</div>
+            <div id="clock" class="info-box clock"></div>
+            <div id="currentEvent" class="info-box event"></div>
+            <div id="countdown" class="info-box countdown"></div>
         </div>
         <div class="rooms">
             <h3>Ämnen och deras salar:</h3>
