--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id="clock" class="info-box clock"></div>
             <div id="currentEvent" class="info-box event"></div>
             <div id="countdown" class="info-box countdown"></div>
-            <div id="overNextEvent" class="info-box"></div> 
+            <div id="overNextEvent" class="info-box overnext"></div> 
         </div>
         <div class="rooms">
             <h3>Ämnen och deras salar:</h3>
