--- a/index.html
+++ b/index.html
@@ -5,28 +5,11 @@
     <title>Skoldagens Schema</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        #closeFullscreen {
-            margin-top: 2rem;
-            padding: 10px 20px;
-            font-size: 1.2rem;
-            border: none;
-            border-radius: 8px;
-            background-color: #ff5555;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #closeFullscreen:hover {
-            background-color: #cc0000;
-        }
-    </style>
 </head>
 <body>
     <div class="controls">
-        <button id="toggleDarkMode" onclick="toggleDarkMode()">Mörkt/Ljust läge</button>
-        <button id="fullscreenCountdown" onclick="openFullscreenCountdown(event)">Helkärm Nedräkning</button>
+        <button id="toggleDarkMode">Mörkt/Ljust läge</button>
+        <button id="fullscreenCountdown">Helskärm Nedräkning</button>
     </div>
 
     <div class="container">
@@ -49,37 +32,15 @@
         </div>
     </div>
 
-    <div id="fullscreenModal" class="fullscreen-hidden" onclick="if(event.target === this) closeFullscreenCountdown()">
+    <div id="fullscreenModal" class="fullscreen-hidden">
         <div id="fullscreenContent">
             <h1 id="fsEvent"></h1>
             <p id="fsCountdown"></p>
-            <button id="closeFullscreen" onclick="closeFullscreenCountdown(event)">Stäng</button>
+            <button id="closeFullscreen">Stäng</button>
         </div>
     </div>
 
     <audio id="bell" src="pling.mp3" preload="auto"></audio>
-    <script>
-      function toggleDarkMode() {
-        document.body.classList.toggle('dark-mode');
-        localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
-      }
-
-      function openFullscreenCountdown(event) {
-        event.stopPropagation();
-        document.getElementById("fullscreenModal").classList.remove("fullscreen-hidden");
-      }
-
-      function closeFullscreenCountdown(event) {
-        if (event) event.stopPropagation();
-        document.getElementById("fullscreenModal").classList.add("fullscreen-hidden");
-      }
-
-      document.addEventListener("keydown", function(event) {
-        if (event.key === "Escape") {
-          closeFullscreenCountdown();
-        }
-      });
-    </script>
     <script src="script.js"></script>
 </body>
 </html>
