--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="controls">
         <button id="toggleDarkMode">Mörkt/Ljust läge</button>
-        <button id="fullscreenCountdown">Helskärm Nedräkning</button>
+        <button id="fullscreenCountdown">Helkärm Nedräkning</button>
     </div>
 
     <div class="container">
@@ -34,9 +34,9 @@
 
     <div id="fullscreenModal" class="fullscreen-hidden">
         <div id="fullscreenContent">
+            <button id="closeFullscreen">&times;</button>
             <h1 id="fsEvent"></h1>
             <p id="fsCountdown"></p>
-            <button id="closeFullscreen">Stäng</button>
         </div>
     </div>
 
