--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="controls">
         <button id="toggleDarkMode">Mörkt/Ljust läge</button>
-        <button id="fullscreenCountdown">Helkärm Nedräkning</button>
+        <button id="fullscreenCountdown">Helskärm Nedräkning</button>
     </div>
 
     <div class="container">
